--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <ul >
-        <h3 ><pre>                                       Tic Tac Toe                                                         </pre></h3>
+        <h3 >   Tic Tac Toe   </h3>
       </ul>
     </nav>
 
