--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <nav>
-      <ul >
-        <h3 ></h3>
-      </ul>
+ 
     </nav>
 
     <div class="gameContainer">
@@ -25,7 +23,7 @@
         <div class="box "><span class="boxtext"></span></div>
         <div class="box "><span class="boxtext"></span></div>
         <div class="box "><span class="boxtext"></span></div>
-        <div class="box bb-0 "><span class="boxtext"></span></div>
+        <div class="box "><span class="boxtext"></span></div>
       </div>
       <div class="gameInfo">
         <h1>Welcome to Tic Tac Toe</h1>
